Added more checks, an IRC notifications handler, and did some reorg

--- a/roles/sensu_client/tasks/main.yml
+++ b/roles/sensu_client/tasks/main.yml
@@ -1,12 +1,22 @@
 ---
 # Install the actual check scripts
 
+- name: Install Carrier-Pigeon (For irc notifications)
+  gem: name=carrier-pigeon state=present
+
 - name: Install Metrics
   copy: src=roles/sensu_client/files/plugins/{{ item }} dest=/etc/sensu/plugins/{{ item }} mode=755
   with_items:
     - load-metrics.rb
     - disk-usage-metrics.rb
     - memory-metrics.rb
+
+- name: Install Default Checks
+  copy: src=roles/sensu_client/files/plugins/{{ item }} dest=/etc/sensu/plugins/{{ item }} mode=755
+  with_items:
+      - check-load.rb
+      - check-mem.sh
+      - check-smart.rb
 
 - name: Restart Sensu Client Service
   service: name=sensu-client state=restarted
