Update All the Things: * Fixed a bug in check_mem.json, it tried to execute a shell script with   ruby. * Added graphite handlers to all the metric checks. * Added a graphite handler and mutator. * Renamed the server.yaml file to better match what is in the.   ansible-sensu repository.

--- a/roles/sensu_server/tasks/main.yml
+++ b/roles/sensu_server/tasks/main.yml
@@ -31,6 +31,11 @@
 - name: Install Default Handler Config
   copy: src=roles/sensu_server/files/handler_configs/default.json dest=/etc/sensu/conf.d/default.json.json
 
+- name: Install Graphite mutator
+  copy: src=roles/sensu_server/files/mutators/graphite.rb dest=/etc/sensu/mutators/graphite.rb mode=755
+
+- name: Install Graphite Config
+  template: src=roles/sensu_server/templates/graphite.json dest=/etc/sensu/conf.d/graphite.json
 
 - name: Resetart Sensu Services
   service: name={{ item }} state=restarted
